# jinx_2_0

ROS/baxter_examples/scripts/: gripper_topic.py
ROS/convert_twist/: CMakeLists.txt  CMakeLists.txt~  package.xml
ROS/convert_twist/src/: convert_twist.cpp
ROS/launchers/launch/: start_baxter.launch  start_jinx.launch
ROS/phidgets/: CMakeLists.txt  CMakeLists.txt~
ROS/phidgets/src/: encoder.cpp  odometry.cpp
ROS/roboteq/roboteq_driver/mbs/: script.hex  (+2 more)
Systems Architecture/: Jinx Architecture Documentation.vsdx  Parts List.xlsx
Systems Architecture/CAD/: AssembledParts.iam  Laser Cutting Notes.txt  jinx_robot.cdr
Systems Architecture/CAD/Parts/: 1047_1.ipt  1047_1.step  12v.ipt  12vTerminal.ipt  12v_dc_to_dc.ipt  24v Converter.ipt  24vTerminal.ipt  5vTerminal.ipt  Base.ipt  BatteryVoltage.ipt  Computer.ipt  DinRail.ipt  Fuse Block.ipt  Gnd_Terminal.ipt  RoboteQ MDC2460.SLDPRT  RoboteQ MDC2460.ipt  TerminalBlock.iam  capacitor.ipt  relays.ipt  vsk-s15-24u-t.stl  wrt54gl.stl
Systems Architecture/Circuit Simulation/: jinx_input_voltage_filter_simulation.slx
UDEV Rules/: 51-kinect.rules
launchers/: full_launch.launch
launchers/launch/: start_jinx.launch  start_lidar.launch
phidgets/: package.xml
phidgets/src/: encoder.cpp  high_speed_encoder.cpp  manager.cpp
roboteq/convert_twist/: CMakeLists.txt
roboteq/convert_twist/src/: convert_twist.cpp
roboteq/roboteq_driver/launch/: start_motors.launch
roboteq/roboteq_driver/mbs/: script.hex  script.mbs
roboteq/roboteq_driver/src/: controller.cpp
roboteq/roboteq_msgs/msg/: Feedback.msg  Status.msg
(+35 files in other folders)
